Fix: add contrast to navlink buttons

--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ html[data-theme="light"] {
   --color-neutral-100: #111827;
   --color-neutral-200: #4b5563;
   --color-neutral-300: #0f1013;
-  --color-accent: #00124d;
+  --color-accent: #3b5ebc;
   --color-accent-dblue: #1e3a8a;
   --color-red-accent: #ab1313;
   --color-secondary-600: #d1d5db;
@@ -67,7 +67,7 @@ html[data-theme="light"] {
 
   --color-bg: #d1d5db;
 
-  --color-modal: rgba(185, 211, 194, 0.493);
+  --color-modal: rgba(250, 250, 250, 0.493);
 
   /* Gradients */
 
